nova (2012.1~e3~20120104.11944-0ubuntu1) UNRELEASED; urgency=low

  [Chuck Short]
  * New upstream version.
  * debian/nova_sudoers, debian/nova-common.install, 
    debian/patches/fix-nova-rootwrap.patch, debian/nova.conf:
    Switch out to nova-rootwrap. (LP: #681774)

  [Adam Gandleman]
  * Removed python-nova.postinst, let dh_python2 generate instead since
    python-support is not a dependency. (LP: #907543)

 -- Adam Gandelman <adamg@canonical.com>  Wed, 21 Dec 2011 15:03:31 -0800

nova (2012.1~e2-0ubuntu3) precise; urgency=low

  * New upstream version.

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 19 Dec 2011 15:48:38 -0500

nova (2012.1~e2-0ubuntu2) precise; urgency=low

  * debian/nova.conf: Fix misconfiguration. 

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 16 Dec 2011 16:13:46 -0500

nova (2012.1~e2-0ubuntu1) precise; urgency=low

  * New usptream release. Fixes the following bugs:
    (LP: #871278, #848643, #859679, #83199)
  * debian/nova-console.install: Fix empty package.
  * debian/patches, debian/pydist-overrides: Cleaner way 
    of disabling unwanted python-dependencies.
  * debian/control: 
    - Suggest python-keystone. (LP: #901881)
    - Update build dependencies.
  * debian/nova.conf: Use virtio networking by default.
    (LP: #904480)
  * debian/fix-traversal-via-image-register.patch: Dropped
    fixed upstream.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 16 Dec 2011 13:03:55 -0500

nova (2012.1~e2~20111208.11721-0ubuntu3) precise; urgency=low

  * SECURITY UPDATE: fix directory traversal during image registration via
    EC2 API and S3/RegisterImage
    - fix-traversal-via-image-register.patch: adjust nova/image/s3.py to
      use basename instead of absolute path
    - CVE-2011-4596

 -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 13 Dec 2011 08:39:13 -0600

nova (2012.1~e2~20111208.11721-0ubuntu2) precise; urgency=low

  * Disable python-coverage as well.

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 12 Dec 2011 10:13:04 -0500
